package house;

public class Dog extends Pet {
    public String bark() {
        return "Gua gua";
    }

    @Override
    public void play(int time) {

    }
}
