package house;

abstract public class Pet extends Animal{
    abstract public void play(int time);
}
