@startuml
class Main {
+ {static} void main(String[])
}
class house.SilentCat {
+ String jump()
+ void play(int)
}
class house.Turtle {
- int speed
+ int getSpeed()
+ void setSpeed(int)
+ String swim()
}
class house.Dog {
+ String bark()
+ void play(int)
}
class house.WildCat {
+ String jump()
+ void play(int)
}
class house.Animal {
- String name
- int age
- int color
- int energy
+ int getAge()
+ void setAge(int)
+ int getColor()
+ void setColor(int)
+ int getEnergy()
+ void setEnergy(int)
+ String getName()
+ void setName(String)
}
abstract class house.Pet {
+ {abstract}void play(int)
}
abstract class house.Cat {
+ {abstract}String jump()
}


house.Cat <|-- house.SilentCat
house.Animal <|-- house.Turtle
house.Pet <|-- house.Dog
house.Cat <|-- house.WildCat
house.Animal <|-- house.Pet
house.Pet <|-- house.Cat
@enduml